[package]
name = "govee_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# May need OpenSSL on Linux machines (https://crates.io/crates/reqwest/#requirements)
reqwest = { version = "0.11.*", features = ["blocking", "json"] }
futures = "0.3.21"
serde = {version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = { version = "1.17.*", features = ["full"] }
